--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,6 @@
 
     <dimen name="min_button_width">48dp</dimen>
     <dimen name="min_button_height">48dp</dimen>
+
+    <dimen name="min_edit_text_width">100dp</dimen>
 </resources>
