--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,16 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <Toolbar
+    <androidx.appcompat.widget.Toolbar
             android:id="@+id/currency_toolbar"
             android:layout_width="@dimen/match_constraints"
             android:layout_height="?attr/actionBarSize"
+            android:layout_marginStart="@dimen/toolbar_start_margin"
+            android:elevation="4dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/currency_fragment"
-            app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/toolbar_title"
-                android:textSize="@dimen/large_text_size"
-                android:textStyle="bold"
-                android:layout_marginStart="@dimen/toolbar_start_margin"/>
-    </Toolbar>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <fragment
             android:id="@+id/currency_fragment"
