--- a/app/src/main/res/layout/view_error.xml
+++ b/app/src/main/res/layout/view_error.xml
@@ -1,36 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <TextView
             android:id="@+id/error_message"
             android:layout_width="@dimen/match_constraints"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/quadruple_margin"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/large_text_size"
-            tools:text="Unable able to retrieve currencies, please try again"
-            app:layout_constraintBottom_toTopOf="@+id/error_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            app:layout_constraintTop_toTopOf="parent"/>\
-
-    <Button
-            android:id="@+id/error_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/min_button_width"
-            android:minHeight="@dimen/min_button_height"
-            android:textAllCaps="true"
-            tools:text="try again"
-            app:layout_constraintVertical_chainStyle="packed"
+            android:textSize="@dimen/huge_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/error_message"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintVertical_bias="0.3"
+            android:text="@string/currency_connection_error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
